Fixes for compiling on OS X 10.10 (Yosemite).

--- a/src/liblighting/CMakeLists.txt
+++ b/src/liblighting/CMakeLists.txt
@@ -5,4 +5,4 @@ include_directories(
 )
 
 add_library(lighting SHARED lighting.cpp)
-target_link_libraries(lighting configFile)
+target_link_libraries(lighting configFile ${OPENGL_LIBRARIES})
