--- a/src/libgraph/CMakeLists.txt
+++ b/src/libgraph/CMakeLists.txt
@@ -1,9 +1,16 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_CURRENT_SOURCE_DIR}/../libsparseMatrix
-	${CMAKE_CURRENT_SOURCE_DIR}/../libmatrixIO
-   ${CMAKE_SOURCE_DIR}/include
+vega_add_library(graph
+  SOURCES graph.cpp)
+target_include_directories(graph
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/../libsparseMatrix
+	  ${CMAKE_CURRENT_SOURCE_DIR}/../libmatrixIO
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-
-add_library(graph SHARED graph.cpp)
-target_link_libraries(graph sparseMatrix matrixIO)
+target_link_libraries(graph
+  PUBLIC
+    sparseMatrix
+    matrixIO
+)
