--- a/src/libintegratorDense/CMakeLists.txt
+++ b/src/libintegratorDense/CMakeLists.txt
@@ -1,15 +1,24 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_SOURCE_DIR}/include
-	${PARDISO_INCLUDE}
-	)
-
 set(integratordense_srcs
 	centralDifferencesDense.cpp
 	implicitBackwardEulerDense.cpp
 	implicitNewmarkDense.cpp
 	integratorBaseDense.cpp
-	)
+)
 
-add_library(integratordense SHARED ${integratordense_srcs})
-target_link_libraries(integratordense matrix integrator performanceCounter reducedForceModel)
+vega_add_library(integratordense
+  SOURCES ${integratordense_srcs})
+target_include_directories(integratordense
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+	  ${PARDISO_INCLUDE}
+)
+target_link_libraries(integratordense
+  PUBLIC
+    matrix
+    integrator
+    performanceCounter
+    reducedForceModel
+)
