--- a/src/liblighting/CMakeLists.txt
+++ b/src/liblighting/CMakeLists.txt
@@ -1,8 +1,15 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_CURRENT_SOURCE_DIR}/../libconfigFile
-   ${CMAKE_SOURCE_DIR}/include
+vega_add_library(lighting
+  SOURCES lighting.cpp)
+target_include_directories(lighting
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/../libconfigFile
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-
-add_library(lighting SHARED lighting.cpp)
-target_link_libraries(lighting configFile ${OPENGL_LIBRARIES})
+target_link_libraries(lighting
+  PUBLIC
+    configFile
+    ${OPENGL_LIBRARIES}
+)
