--- a/src/libsparseMatrix/CMakeLists.txt
+++ b/src/libsparseMatrix/CMakeLists.txt
@@ -1,11 +1,13 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_SOURCE_DIR}/include
-)
-
 set(SM_SRCS
   sparseMatrix.cpp
   sparseMatrixMT.cpp
 )
 
-add_library(sparseMatrix SHARED ${SM_SRCS})
+vega_add_library(sparseMatrix SOURCES ${SM_SRCS})
+target_include_directories(sparseMatrix
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
