--- a/src/libstvk/CMakeLists.txt
+++ b/src/libstvk/CMakeLists.txt
@@ -1,11 +1,3 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_CURRENT_SOURCE_DIR}/../libsparseMatrix
-   ${CMAKE_CURRENT_SOURCE_DIR}/../libvolumetricMesh
-   ${CMAKE_CURRENT_SOURCE_DIR}/../libminivector
-   ${CMAKE_SOURCE_DIR}/include
-)
-
 set(STVK_SRCS
  StVKCubeABCD.cpp
  StVKElementABCD.cpp
@@ -19,5 +11,15 @@ set(STVK_SRCS
  StVKTetHighMemoryABCD.cpp
 )
 
-add_library(stvk SHARED ${STVK_SRCS})
+vega_add_library(stvk SOURCES ${STVK_SRCS})
+target_include_directories(stvk
+  PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}
+   ${CMAKE_CURRENT_SOURCE_DIR}/../libsparseMatrix
+   ${CMAKE_CURRENT_SOURCE_DIR}/../libvolumetricMesh
+   ${CMAKE_CURRENT_SOURCE_DIR}/../libminivector
+  PUBLIC
+   $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
 target_link_libraries(stvk minivector volumetricMesh sparseMatrix)
