--- a/src/libvolumetricMesh/CMakeLists.txt
+++ b/src/libvolumetricMesh/CMakeLists.txt
@@ -1,28 +1,29 @@
-include_directories(
+set(VOL_SRCS
+volumetricMeshParser.cpp
+generateInterpolationMatrix.cpp
+generateMassMatrix.cpp
+generateSurfaceMesh.cpp
+generateMeshGraph.cpp
+computeStiffnessMatrixNullspace.cpp
+cubicMesh.cpp
+tetMesh.cpp
+volumetricMeshLoader.cpp
+volumetricMesh.cpp
+volumetricMeshENuMaterial.cpp
+volumetricMeshMooneyRivlinMaterial.cpp
+volumetricMeshExtensions.cpp
+)
+
+vega_add_library(volumetricMesh SOURCES ${VOL_SRCS})
+target_include_directories(volumetricMesh
+  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/../libsparseMatrix
    ${CMAKE_CURRENT_SOURCE_DIR}/../libgraph
    ${CMAKE_CURRENT_SOURCE_DIR}/../libobjMesh
    ${CMAKE_CURRENT_SOURCE_DIR}/../libminivector
-   ${CMAKE_SOURCE_DIR}/include
+  PUBLIC
+   $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-
-
-set(VOL_SRCS
-volumetricMeshParser.cpp 
-generateInterpolationMatrix.cpp 
-generateMassMatrix.cpp 
-generateSurfaceMesh.cpp 
-generateMeshGraph.cpp 
-computeStiffnessMatrixNullspace.cpp
-cubicMesh.cpp 
-tetMesh.cpp 
-volumetricMeshLoader.cpp 
-volumetricMesh.cpp 
-volumetricMeshENuMaterial.cpp 
-volumetricMeshMooneyRivlinMaterial.cpp 
-volumetricMeshExtensions.cpp
-)
-
-add_library(volumetricMesh SHARED ${VOL_SRCS})
 target_link_libraries(volumetricMesh sparseMatrix graph objMesh minivector)
