--- a/src/other/glui/glui-2.35/src/CMakeLists.txt
+++ b/src/other/glui/glui-2.35/src/CMakeLists.txt
@@ -1,9 +1,7 @@
-include_directories(
-	${CMAKE_CURRENT_SOURCE_DIR}
-	${CMAKE_CURRENT_SOURCE_DIR}/include
-	)
+if (NOT APPLE)
+  find_package(X11)
+endif()
 
-find_package(X11)
 find_package(GLUT)
 
 #LIBGLUI = -L./lib -lglui
@@ -25,40 +23,51 @@ find_package(GLUT)
 #######################################
 
 set(GLUI_SRCS
-	algebra3.cpp
-	arcball.cpp
-	glui.cpp
-	glui_add_controls.cpp
-	glui_bitmap_img_data.cpp
-	glui_bitmaps.cpp
-	glui_button.cpp
-	glui_checkbox.cpp
-	glui_column.cpp
-	glui_commandline.cpp
-	glui_control.cpp
-	glui_edittext.cpp
-	glui_filebrowser.cpp
-	glui_list.cpp
-	glui_listbox.cpp
-	glui_mouse_iaction.cpp
-	glui_node.cpp
-	glui_panel.cpp
-	glui_radio.cpp
-	glui_rollout.cpp
-	glui_rotation.cpp
-	glui_scrollbar.cpp
-	glui_separator.cpp
-	glui_spinner.cpp
-	glui_statictext.cpp
-	glui_string.cpp
-	glui_textbox.cpp
-	glui_translation.cpp
-	glui_tree.cpp
-	glui_treepanel.cpp
-	glui_window.cpp
-	quaternion.cpp
-	viewmodel.cpp
-	)
+  algebra3.cpp
+  arcball.cpp
+  glui.cpp
+  glui_add_controls.cpp
+  glui_bitmap_img_data.cpp
+  glui_bitmaps.cpp
+  glui_button.cpp
+  glui_checkbox.cpp
+  glui_column.cpp
+  glui_commandline.cpp
+  glui_control.cpp
+  glui_edittext.cpp
+  glui_filebrowser.cpp
+  glui_list.cpp
+  glui_listbox.cpp
+  glui_mouse_iaction.cpp
+  glui_node.cpp
+  glui_panel.cpp
+  glui_radio.cpp
+  glui_rollout.cpp
+  glui_rotation.cpp
+  glui_scrollbar.cpp
+  glui_separator.cpp
+  glui_spinner.cpp
+  glui_statictext.cpp
+  glui_string.cpp
+  glui_textbox.cpp
+  glui_translation.cpp
+  glui_tree.cpp
+  glui_treepanel.cpp
+  glui_window.cpp
+  quaternion.cpp
+  viewmodel.cpp
+)
 
-add_library(glui ${GLUI_SRCS})
-target_link_libraries(glui ${GLUT_LIBRARY})
+vega_add_library(glui
+  SOURCES ${GLUI_SRCS}
+)
+target_include_directories(
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+target_link_libraries(glui
+  PUBLIC
+    ${GLUT_LIBRARY}
+)
