--- a/src/libclothBW/CMakeLists.txt
+++ b/src/libclothBW/CMakeLists.txt
@@ -1,13 +1,21 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_SOURCE_DIR}/include
-)
-
 set(clothbw_srcs
 	clothBW.cpp
 	clothBWFromObjMesh.cpp
 	clothBWMT.cpp
 )
 
-add_library(clothbw SHARED ${clothbw_srcs})
-target_link_libraries(clothbw minivector objMesh sparseMatrix)
+vega_add_library(clothbw
+  SOURCES ${clothbw_srcs})
+target_include_directories(clothbw
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+target_link_libraries(clothbw
+  PUBLIC
+    minivector
+    objMesh
+    sparseMatrix
+)
