--- a/src/libglslPhong/CMakeLists.txt
+++ b/src/libglslPhong/CMakeLists.txt
@@ -1,6 +1,9 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_SOURCE_DIR}/include
+vega_add_library(glslPhong
+  SOURCES glslPhong.cpp)
+target_include_directories(glslPhong
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-
-add_library(glslPhong SHARED glslPhong.cpp)
