--- a/src/libinsertRows/CMakeLists.txt
+++ b/src/libinsertRows/CMakeLists.txt
@@ -1,6 +1,9 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_SOURCE_DIR}/include
+vega_add_library(insertRows
+  SOURCES insertRows.cpp)
+target_include_directories(insertRows
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-
-add_library(insertRows SHARED insertRows.cpp)
