--- a/src/libloadList/CMakeLists.txt
+++ b/src/libloadList/CMakeLists.txt
@@ -1,6 +1,9 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_SOURCE_DIR}/include
+vega_add_library(loadList
+  SOURCES loadList.cpp)
+target_include_directories(loadList
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-
-add_library(loadList SHARED loadList.cpp)
