--- a/src/libmatrixIO/CMakeLists.txt
+++ b/src/libmatrixIO/CMakeLists.txt
@@ -1,6 +1,8 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_SOURCE_DIR}/include
+vega_add_library(matrixIO SOURCES matrixIO.cpp)
+target_include_directories(matrixIO
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-
-add_library(matrixIO SHARED matrixIO.cpp)
