--- a/src/libmodalMatrix/CMakeLists.txt
+++ b/src/libmodalMatrix/CMakeLists.txt
@@ -1,6 +1,8 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_SOURCE_DIR}/include
+vega_add_library(modalMatrix SOURCES modalMatrix.cpp)
+target_include_directories(modalMatrix
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-
-add_library(modalMatrix SHARED modalMatrix.cpp)
