--- a/src/libobjMesh/CMakeLists.txt
+++ b/src/libobjMesh/CMakeLists.txt
@@ -1,13 +1,3 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-	${CMAKE_CURRENT_SOURCE_DIR}/../libmatrixIO
-	${CMAKE_CURRENT_SOURCE_DIR}/../libimageIO
-	${CMAKE_CURRENT_SOURCE_DIR}/../libsparseMatrix
-   ${CMAKE_CURRENT_SOURCE_DIR}/../libminivector
-   ${CMAKE_CURRENT_SOURCE_DIR}/../libgraph
-   ${CMAKE_SOURCE_DIR}/include
-)
-
 set(OBJ_SRCS
 	boundingBox.cpp
    objMesh.cpp
@@ -26,5 +16,18 @@ set(OBJ_SRCS
 	tribox3.cpp
 )
 
-add_library(objMesh SHARED ${OBJ_SRCS})
+vega_add_library(objMesh
+  SOURCES ${OBJ_SRCS})
+target_include_directories(objMesh
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+	  ${CMAKE_CURRENT_SOURCE_DIR}/../libmatrixIO
+	  ${CMAKE_CURRENT_SOURCE_DIR}/../libimageIO
+	  ${CMAKE_CURRENT_SOURCE_DIR}/../libsparseMatrix
+    ${CMAKE_CURRENT_SOURCE_DIR}/../libminivector
+    ${CMAKE_CURRENT_SOURCE_DIR}/../libgraph
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
 target_link_libraries(objMesh minivector matrixIO imageIO sparseMatrix graph ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})
