--- a/src/libopenGLHelper/CMakeLists.txt
+++ b/src/libopenGLHelper/CMakeLists.txt
@@ -1,14 +1,16 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_SOURCE_DIR}/include
-	${CMAKE_CURRENT_SOURCE_DIR}/../libmatrixIO
+set(openglhelper_srcs
+  openGLHelper.cpp
+  printBitmap.cpp
+  saveScreenShot.cpp
 )
 
-set(openglhelper_srcs
-	openGLHelper.cpp
-	printBitmap.cpp
-	saveScreenShot.cpp
-	)
-
-add_library(openglhelper SHARED ${openglhelper_srcs})
+vega_add_library(openglhelper SOURCES ${openglhelper_srcs})
+target_include_directories(openglhelper
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+    ${CMAKE_CURRENT_SOURCE_DIR}/../libmatrixIO
+)
 target_link_libraries(openglhelper matrixIO imageIO)
