--- a/src/libquaternion/CMakeLists.txt
+++ b/src/libquaternion/CMakeLists.txt
@@ -1,6 +1,8 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_SOURCE_DIR}/include
+vega_add_library(quaternion SOURCES quaternion.cpp)
+target_include_directories(quaternion
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
 )
-
-add_library(quaternion SHARED quaternion.cpp)
