--- a/src/librenderVolumetricMesh/CMakeLists.txt
+++ b/src/librenderVolumetricMesh/CMakeLists.txt
@@ -1,7 +1,13 @@
-include_directories(
-	${CMAKE_CURRENT_SOURCE_DIR}
-	${CMAKE_SOURCE_DIR}/include
-	)
-
-add_library(renderVolumetricMesh SHARED renderVolumetricMesh.cpp)
-target_link_libraries(renderVolumetricMesh volumetricMesh openGLHelper)
+vega_add_library(renderVolumetricMesh SHARED renderVolumetricMesh.cpp)
+target_include_directories(renderVolumetricMesh
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+target_link_libraries(renderVolumetricMesh
+  PUBLIC
+    volumetricMesh
+    openGLHelper
+)
