--- a/src/librigidBodyDynamics/CMakeLists.txt
+++ b/src/librigidBodyDynamics/CMakeLists.txt
@@ -1,7 +1,16 @@
-include_directories(
-	${CMAKE_CURRENT_SOURCE_DIR}
-	${CMAKE_SOURCE_DIR}/include
-	)
-
-add_library(rigidBodyDynamics rigidBody.cpp rigidBody_generalTensor.cpp)
-target_link_libraries(rigidBodyDynamics quaternion)
+vega_add_library(rigidBodyDynamics
+  SOURCES
+    rigidBody.cpp
+    rigidBody_generalTensor.cpp
+)
+target_include_directories(rigidBodyDynamics
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+target_link_libraries(rigidBodyDynamics
+  PUBLIC
+    quaternion
+)
