--- a/src/libsparseSolver/CMakeLists.txt
+++ b/src/libsparseSolver/CMakeLists.txt
@@ -1,9 +1,3 @@
-include_directories(
-   ${CMAKE_CURRENT_SOURCE_DIR}
-   ${CMAKE_CURRENT_SOURCE_DIR}/../libsparseMatrix
-   ${CMAKE_SOURCE_DIR}/include
-)
-
 set(SOLVER_SRCS
  linearSolver.cpp
  #ARPACKSolver.cpp
@@ -14,5 +8,13 @@ set(SOLVER_SRCS
  invMKSolver.cpp
 )
 
-add_library(sparseSolver SHARED ${SOLVER_SRCS})
+vega_add_library(sparseSolver SOURCES ${SOLVER_SRCS})
+target_include_directories(sparseSolver
+  PRIVATE
+   ${CMAKE_CURRENT_SOURCE_DIR}
+   ${CMAKE_CURRENT_SOURCE_DIR}/../libsparseMatrix
+  PUBLIC
+   $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
 target_link_libraries(sparseSolver sparseMatrix)
