--- a/src/libreducedForceModel/CMakeLists.txt
+++ b/src/libreducedForceModel/CMakeLists.txt
@@ -8,5 +8,11 @@ target_include_directories(reducedForceModel
     ${CMAKE_CURRENT_SOURCE_DIR}
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/libreducedForceModel>
     $<INSTALL_INTERFACE:include>
+)
+target_link_libraries(reducedForceModel
+  PUBLIC
+    ${LAPACK_LIBRARIES}
+    ${BLAS_LIBRARIES}
 )
