--- a/src/libreducedStvk/CMakeLists.txt
+++ b/src/libreducedStvk/CMakeLists.txt
@@ -11,6 +11,7 @@ target_include_directories(reducedStvk
     ${CMAKE_CURRENT_SOURCE_DIR}
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src/libreducedStvk>
     $<INSTALL_INTERFACE:include>
 )
 target_link_libraries(reducedStvk
