--- a/src/libobjMeshGPUDeformer/CMakeLists.txt
+++ b/src/libobjMeshGPUDeformer/CMakeLists.txt
@@ -17,10 +17,25 @@ target_include_directories(objmeshbgpudeformer
 	  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
     ${OPENGL_INCLUDE_DIR}
+    ${CG_INCLUDE_PATH}
 )
+if (APPLE)
+  # The nVidia installer puts the framework in /Library/Frameworks/Cg.framework
+  # but modern Xcode compilers expect frameworks to live in the SDK directory
+  # if one is specified... so add framework search paths to fix this:
+  target_compile_options(objmeshbgpudeformer
+    PUBLIC
+      -iframework "${Cg_FRAMEWORKS}/.."
+  )
+  set_target_properties(objmeshbgpudeformer
+    PROPERTIES
+    LINK_FLAGS "-F ${Cg_FRAMEWORKS}/.."
+  )
+endif()
 target_link_libraries(objmeshbgpudeformer
   PUBLIC
     objMesh
     lighting
     ${OPENGL_LIBRARIES}
+    ${CG_LIBRARY}
 )
